--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,8 @@
 		"react-scripts": "1.1.4",
 		"react-stripe-checkout": "^2.6.3",
 		"redux": "^4.0.0",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"url-parse": "^1.4.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
