--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
     "path": "^0.12.7",
-    "stripe": "^6.12.1"
+    "stripe": "^6.12.1",
+    "url-parse": "^1.4.3"
   }
 }
